--- a/201802/05/Dockerfile.save
+++ b/201802/05/Dockerfile.save
@@ -1,7 +1,7 @@
 FROM node:carbon
 
 # Create app directory
-WORKDIR ~/Calavera2/201802/05/
+WORKDIR ~/Calavera2/201802/05
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
@@ -14,5 +14,6 @@ RUN npm install
 # Bundle app source
 COPY . .
 
-EXPOSE 8080
+EXPOSE 10008
+
 CMD [ "npm", "start" ]
